--- a/login_page/style.css
+++ b/login_page/style.css
@@ -1,4 +1,4 @@
-body {
+/* body {
     margin: 0;
     padding: 0;
     background-color: #1e1e2f;
@@ -47,4 +47,4 @@ body {
 #message {
     margin-top: 15px;
     font-size: 14px;
-}
+} */
