--- a/login_page/style.css
+++ b/login_page/style.css
@@ -1,50 +1,32 @@
-/* body {
+body {
+    height: 100vh;
     margin: 0;
-    padding: 0;
-    background-color: #1e1e2f;
-    font-family: Arial, sans-serif;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background: #1e1e1e;   
+    font-family: Arial;
+}
+h1{
+    color: white;          
+}
+#loginform {
+    width: 300px;
+    padding: 20px;
+    margin-top: 30px;
+    background: #ffffff;
+    border-radius: 15px;   
+    display: flex;
+    flex-direction: column;
 }
 
-.login-box {
-    width: 350px;
-    padding: 30px;
-    background-color: #ffffff;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    border-radius: 8px;
-    box-shadow: 0 0 15px rgba(0,0,0,0.3);
-    text-align: center;
+input, button {
+    padding: 8px;
+    margin-bottom: 10px;
 }
 
-.login-box h2 {
-    margin-bottom: 20px;
-}
-
-.login-box input {
-    width: 100%;
-    padding: 10px;
-    margin: 10px 0;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-}
-
-.login-box button {
-    width: 100%;
-    padding: 10px;
-    background-color: #4a5cff;
-    color: white;
+button {
+    background: orange;   
+    color: white;         
     border: none;
-    border-radius: 5px;
-    cursor: pointer;
 }
-
-.login-box button:hover {
-    background-color: #3948d6;
-}
-
-#message {
-    margin-top: 15px;
-    font-size: 14px;
-} */
