--- a/Day-30-Admin_panel/src/index.css
+++ b/Day-30-Admin_panel/src/index.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #d3ba85;
+  background-color: #3b3232;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -17,7 +17,5 @@ body {
   margin: 0;
   padding-top: 80px;
   padding-bottom: 80px;
-  color: #333;
- 
 }
 
